@@ -1,3 +1,10 @@
+2003-03-31  Brian Gough  <bjg@network-theory.co.uk>
+
+	* siman.c (gsl_siman_solve): avoid reevaluation for best_E
+	(gsl_siman_solve): loop over param.iters_fixed_T not
+	params.n_tries
+	(gsl_siman_solve): initialise energy at start
+
 Sat Aug  3 20:32:38 2002  Brian Gough  <bjg@network-theory.co.uk>
 
 	* siman.c (gsl_siman_solve): fix acceptance criterion to match
